# Urblock

./: .gitignore  README.md
urblock_gui/: config.py  main.py  requirements.txt  storage.py
urblock_gui/app_profile/: __init__.py  session.py
urblock_gui/auth/: __init__.py  user.py
urblock_gui/autonomous/: __init__.py  knowledge.py  service.py
urblock_gui/camera/: __init__.py  frame_buffer.py  opencv_capture.py
urblock_gui/docs/: autonomous_profile.ru.md
urblock_gui/i18n/: ru.py
urblock_gui/legal/: __init__.py  user_agreement.ru.txt
urblock_gui/security/: __init__.py  vault.py
urblock_gui/tabs/: about.py  camera.py  faces.py  settings.py
urblock_gui/ui/: camera_texture.py  eula_gate.py  fonts.py
urblock_gui/vision/: __init__.py  face_detector.py  face_matcher.py  face_pipeline.py
urblock_po/: CMakeLists.txt  main.cpp
urblock_po/docs/: LOGIN.ru.md
urblock_po/login/: camera_session.py  daemon_launcher.py  display_env.py  enroll.py  gdm_dbus_submit.py  gdm_login.py  greeter_agent.py  lock_agent.py  overlay.py  overlay_ui.py  password_check.py  session_unlock.py  verify.py  verify_session.py
urblock_po/pam/: urblock-auth.conf
urblock_po/scripts/: disable-login.sh  enable-gdm-login.sh  fix-gdm-pam.sh  fix-login-now.sh  install-greeter-agent.sh  install-lock-agent.sh  install-login.sh  install-ydotoold-system.sh  urblock-build-embeddings  urblock-enroll  urblock-greeter-agent  urblock-lock-agent  urblock-verify
